<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="listed_price_text">Listed Price</string>
    <string name="number_text"></string>
    <string name="discount_percentage_text">Discount %</string>
    <string name="custom_text">Custom</string>
    <string name="you_saved_text">You Saved</string>
    <string name="buton_text">Exit</string>
    <string name="hint_text">Enter Listed Price</string>
    <string name="you_pay_text">You Pay</string>
    <string name="pay_initialization">$0.00</string>
    <string name="custom_label_progress">Custom</string>
    <string name="saved_initialization">$0.00</string>
    <string name="radio_button1">10%</string>
    <string name="radio_button2">25%</string>
    <string name="radio_button3">50%</string>
    <string name="radio_button4">Custom</string>
    <string name="initial_seekbar_value">25</string>
    <string name="initial_seekbar_value_percent">25%</string>

</resources>
